--- a/style.css
+++ b/style.css
@@ -25,6 +25,32 @@ body{
 
 }
 
+.forms-google{
+    width: 100%;
+    height: 100vh;
+    display: block;
+    border: 0;
+    overflow: hidden;
+    
+}
+
+.fechar{
+    margin-top: 20px;
+    width: 60px;
+    position: absolute;
+    right: 45px;
+}
+
+iframe {
+    scrollbar-width: none; /* Para navegadores compatíveis (Firefox) */
+    -ms-overflow-style: none; /* Para navegadores baseados em Edge */
+}
+
+iframe.forms-google::-webkit-scrollbar {
+    display: none; /* Para navegadores baseados em Webkit */
+}
+
+
 .modal-in{
     animation: in 1s ease-in;
 }
@@ -55,50 +81,6 @@ body{
     }
 }
 
-.form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-label{
-    font-size: 26px;
-    font-weight: 900;
-    color:#e22524;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-}
-
-input{
-    width: 400px;
-    border: 0;
-    height: 25px;
-    border-radius: 100px;
-    margin-bottom: 20px;
-    font-family: inherit;
-    font-size: 24px;
-    padding: 15px 50px;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-#submit{
-    height: 50px;
-    width: 400px;
-    background-color: #e22524;
-    border: 0;
-    border-radius: 100px;
-    color: white;
-    font-family: inherit;
-    font-size: 28px;
-    margin-top: 20px;
-    transition: background 0.3s;
-}
-
-#submit:hover{
-    background-color: #811212;
-}
 .modalrodape{
     width: 100%;
     height: 100px;
@@ -252,7 +234,7 @@ input{
     text-decoration: none;
 }
 
-iframe {
+.iframe-maps {
     border: 5px solid #e22524;
     width: 100%;
     height: 300px;
