--- a/style.css
+++ b/style.css
@@ -36,9 +36,43 @@ body{
 
 .fechar{
     margin-top: 20px;
-    width: 60px;
+    width: 250px;
     position: absolute;
     right: 45px;
+}
+
+.fechar-in{
+    animation: close-in 1.5s forwards;
+}
+
+.fechar-out{
+    animation: close-out 1.5s forwards;
+}
+
+@keyframes close-in {
+    0%{
+        opacity: 0;
+        transform:translateY(-300px)
+    }
+    
+    100%{
+        opacity: 1;
+        transform:translateY(0px)
+    }
+    
+}
+
+@keyframes close-out {
+    0%{
+        opacity: 1;
+        transform:translateY(0px)
+    }
+    
+    100%{
+        opacity: 0;
+        transform:translateY(-300px)
+    }
+    
 }
 
 iframe {
@@ -307,7 +341,7 @@ iframe.forms-google::-webkit-scrollbar {
 #countdown #tiles > span{
     width: 92px;
     max-width: 92px;
-    font: bold 48px Nunito;
+    font: bold 60px kaneda-gothic;
     font-weight: 900;
     text-align: center;
     color: white;
@@ -320,7 +354,7 @@ iframe.forms-google::-webkit-scrollbar {
     border-radius: 25px;
     box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.8);
     margin: 0 7px;
-    padding: 18px 0;
+    padding: 10px 0;
     display: inline-block;
     position: relative;
 }
@@ -353,12 +387,12 @@ iframe.forms-google::-webkit-scrollbar {
     height: 25px;
     text-align: center;
     position: absolute;
-    bottom: 8px;
+    bottom: 15px;
 }
 
 #countdown .labels li{
     width: 102px;
-    font: bold 15px Nunito;
+    font: bold 24px kaneda-gothic;
     font-weight: 900;
     color: white;
     text-shadow: 1px 1px 0px #811212;
